--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@
           </div>
      </section> -->
 
+     <div class="google-map" data-aos="zoom-in-up">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d987.7311166677376!2d112.62017972922906!3d-8.00672647160825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd627fa6be942bd%3A0x82c14e295cc88076!2sAula%20SARWAKIRTI%20-%20UNIKAMA!5e0!3m2!1sid!2sid!4v1632568006975!5m2!1sid!2sid" width="1920" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+     </div>
 
      <!-- TESTIMONIAL -->
      <section class="testimonial section-padding">
