--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="css/stylesheet.css">
 </head>
-<body id="top">
+<body id="top" onscroll="myFunction();">
 
      <!-- SCROLL TOP -->
-     <a href="#top" onclick="scrollToTop(); return false">
-          <div class="rounded-circle animate__animated animate__pulse animate__infinite infinite" id="scrollTop">
+     <a href="" id="scroll" onclick="scrollToTop(); return false">
+          <!-- <div class="rounded-circle animate__animated animate__pulse animate__infinite infinite" id="scrollTop"> -->
+          <div class="rounded-circle" id="scrollTop">
                <i class="fa fa-arrow-up" aria-hidden="true" style="color: white;" id="arrow"></i>
           </div>
      </a>
@@ -32,7 +33,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html" data-aos="fade-down" data-aos>
-                    Baemon Team Dev
+                    Baemon Team Dev <p id="demo"></p>
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -230,6 +231,30 @@
      <script src="js/smoothscroll.js"></script>
      <script src="js/custom.js"></script>
      <script src="js/scrollToTop.js"></script>
+     <script>
+          function myFunction() {
+               var y = window.pageYOffset;
+               if (y >= 500) {
+                    document.getElementById("scrollTop").style.transform = "translateY(0px)";
+                    document.getElementById("scrollTop").style.opacity = "1";
+               } else if (y >= 400 && y < 500) {
+                    document.getElementById("scrollTop").style.transform = "translateY(-"+y+"px)";
+                    document.getElementById("scrollTop").style.opacity = "0.8";
+               } else if (y >= 300 && y < 400) {
+                    document.getElementById("scrollTop").style.transform = "translateY(-"+y+"px)";
+                    document.getElementById("scrollTop").style.opacity = "0.6";
+               } else if (y >= 200 && y < 300) {
+                    document.getElementById("scrollTop").style.transform = "translateY(-"+y+"px)";
+                    document.getElementById("scrollTop").style.opacity = "0.4";
+               } else if (y >= 100 && y < 200) {
+                    document.getElementById("scrollTop").style.transform = "translateY(-"+y+"px)";
+                    document.getElementById("scrollTop").style.opacity = "0.2";
+               } else {
+                    document.getElementById("scrollTop").style.transform = "translateY(-150px)";
+                    document.getElementById("scrollTop").style.opacity = "0";
+               }
+          }    
+     </script>
 
 </body>
 </html>
