--- a/index.html
+++ b/index.html
@@ -178,6 +178,75 @@
           </div>
      </section>
 
+     <section class="project section-padding-half" id="project">
+          <div class="container-fluid">
+               <div class="row">
+
+                    <div class="col-lg-12 col-12">
+
+                        <h2 class="mb-5 text-center" data-aos="fade-up">
+                            Our <strong>equipments</strong>
+                        </h2>
+
+                         <div class="owl-carousel owl-theme row" id="project-slide">
+                              <div class="item project-wrapper col-2" data-aos="flip-left" data-aos-delay="100">
+                                   <img src="images/equipments/bootstrap.svg" class="img-fluid" alt="Equipment" >
+                              </div>
+
+                              <div class="item project-wrapper col-2" data-aos="flip-left" data-aos-delay="100">
+                                   <img src="images/equipments/chrome.svg" class="img-fluid" alt="Equipment" >
+                              </div>
+
+                              <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/project/project-image03.jpg" class="img-fluid" alt="project image">
+
+                                   <div class="project-info">
+                                        <small>Branding</small>
+
+                                        <h3>
+                                             <a href="project-detail.html">
+                                                  <span>Shoes factory</span>
+                                                  <i class="fa fa-angle-right project-icon"></i>
+                                             </a>
+                                        </h3>
+                                   </div>
+                              </div>
+
+                              <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/project/project-image04.jpg" class="img-fluid" alt="project image">
+
+                                   <div class="project-info">
+                                        <small>Social Media</small>
+
+                                        <h3>
+                                             <a href="project-detail.html">
+                                                  <span>Race Bicycle</span>
+                                                  <i class="fa fa-angle-right project-icon"></i>
+                                             </a>
+                                        </h3>
+                                   </div>
+                              </div>
+
+                              <div class="item project-wrapper" data-aos="fade-up">
+                                   <img src="images/project/project-image05.jpg" class="img-fluid" alt="project image">
+
+                                   <div class="project-info">
+                                        <small>Video</small>
+
+                                        <h3>
+                                             <a href="project-detail.html">
+                                                  <span>Ultimate HealthCare</span>
+                                                  <i class="fa fa-angle-right project-icon"></i>
+                                             </a>
+                                        </h3>
+                                   </div>
+                              </div>
+                         </div>
+                    </div>
+
+               </div>
+          </div>
+     </section>
 
      <footer class="site-footer">
           <div class="container">
