--- a/index.html
+++ b/index.html
@@ -188,58 +188,36 @@
                             Our <strong>equipments</strong>
                         </h2>
 
-                         <div class="owl-carousel owl-theme row" id="project-slide">
-                              <div class="item project-wrapper col-2" data-aos="flip-left" data-aos-delay="100">
-                                   <img src="images/equipments/bootstrap.svg" class="img-fluid" alt="Equipment" >
+                         <div class="owl-carousel owl-theme" id="project-slide">
+                              <div class="item project-wrapper text-center" data-aos="flip-left" data-aos-delay="100" style="width:80px">
+                                   <img src="images/equipments/bootstrap.svg" class="rounded mx-auto d-block" data-toggle="tooltip" data-placement="bottom" title="Bootstrap" alt="Bootstrap" >
                               </div>
-
-                              <div class="item project-wrapper col-2" data-aos="flip-left" data-aos-delay="100">
-                                   <img src="images/equipments/chrome.svg" class="img-fluid" alt="Equipment" >
+                              <div class="item project-wrapper text-center" data-aos="flip-left" data-aos-delay="100" style="width:80px">
+                                   <img src="images/equipments/chrome.svg" class="rounded mx-auto d-block" data-toggle="tooltip" data-placement="bottom" title="Chrome" alt="Chrome" >
                               </div>
-
-                              <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/project/project-image03.jpg" class="img-fluid" alt="project image">
-
-                                   <div class="project-info">
-                                        <small>Branding</small>
-
-                                        <h3>
-                                             <a href="project-detail.html">
-                                                  <span>Shoes factory</span>
-                                                  <i class="fa fa-angle-right project-icon"></i>
-                                             </a>
-                                        </h3>
-                                   </div>
+                              <div class="item project-wrapper text-center" data-aos="flip-left" data-aos-delay="100" style="width:80px">
+                                   <img src="images/equipments/css-3.svg" class="rounded mx-auto d-block" data-toggle="tooltip" data-placement="bottom" title="CSS 3"alt="CSS 3" >
                               </div>
-
-                              <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/project/project-image04.jpg" class="img-fluid" alt="project image">
-
-                                   <div class="project-info">
-                                        <small>Social Media</small>
-
-                                        <h3>
-                                             <a href="project-detail.html">
-                                                  <span>Race Bicycle</span>
-                                                  <i class="fa fa-angle-right project-icon"></i>
-                                             </a>
-                                        </h3>
-                                   </div>
+                              <div class="item project-wrapper text-center" data-aos="flip-left" data-aos-delay="100" style="width:80px">
+                                   <img src="images/equipments/html-5.svg" class="rounded mx-auto d-block" data-toggle="tooltip" data-placement="bottom" title="HTML 5" alt="HTML 5" >
                               </div>
-
-                              <div class="item project-wrapper" data-aos="fade-up">
-                                   <img src="images/project/project-image05.jpg" class="img-fluid" alt="project image">
-
-                                   <div class="project-info">
-                                        <small>Video</small>
-
-                                        <h3>
-                                             <a href="project-detail.html">
-                                                  <span>Ultimate HealthCare</span>
-                                                  <i class="fa fa-angle-right project-icon"></i>
-                                             </a>
-                                        </h3>
-                                   </div>
+                              <div class="item project-wrapper text-center" data-aos="flip-left" data-aos-delay="100" style="width:80px">
+                                   <img src="images/equipments/javascript.svg" class="rounded mx-auto d-block" data-toggle="tooltip" data-placement="bottom" title="Javascript" alt="Javascript" >
+                              </div>
+                              <div class="item project-wrapper text-center" data-aos="flip-left" data-aos-delay="100" style="width:80px">
+                                   <img src="images/equipments/jquery.svg" class="rounded mx-auto d-block" data-toggle="tooltip" data-placement="bottom" title="Jquery" alt="Jquery" >
+                              </div>
+                              <div class="item project-wrapper text-center" data-aos="flip-left" data-aos-delay="100" style="width:80px">
+                                   <img src="images/equipments/laravel.svg" class="rounded mx-auto d-block" data-toggle="tooltip" data-placement="bottom" title="Laravel" alt="Laravel" >
+                              </div>
+                              <div class="item project-wrapper text-center" data-aos="flip-left" data-aos-delay="100" style="width:80px">
+                                   <img src="images/equipments/php.svg" class="rounded mx-auto d-block" data-toggle="tooltip" data-placement="bottom" title="php" alt="php" >
+                              </div>
+                              <div class="item project-wrapper text-center" data-aos="flip-left" data-aos-delay="100" style="width:80px">
+                                   <img src="images/equipments/tailwindcss-icon.svg" class="rounded mx-auto d-block" data-toggle="tooltip" data-placement="bottom" title="Tailwind CSS" alt="Tailwind CSS" >
+                              </div>
+                              <div class="item project-wrapper text-center" data-aos="flip-left" data-aos-delay="100" style="width:80px">
+                                   <img src="images/equipments/visual-studio-code.svg" class="rounded mx-auto d-block" data-toggle="tooltip" data-placement="bottom" title="Visual Studio Code" alt="Visual Studio Code" >
                               </div>
                          </div>
                     </div>
