--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
      <!-- MENU BAR -->
      <nav class="navbar navbar-expand-lg">
           <div class="container">
-               <a class="navbar-brand" href="index.html" data-aos="fade-down" data-aos>
+               <a class="navbar-brand" href="#hero" data-aos="fade-down" data-aos onclick="scrollToTop(); return false">
                     Baemon Team Dev <p id="demo"></p>
                </a>
 
@@ -46,16 +46,13 @@
                <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                          <li class="nav-item">
-                              <a href="#about" class="nav-link smoothScroll">Studio</a>
+                              <a href="#about" class="nav-link smoothScroll">We are here!</a>
                          </li>
                          <li class="nav-item">
                               <a href="#project" class="nav-link smoothScroll">Our Works</a>
                          </li>
                          <li class="nav-item">
-                              <a href="blog.html" class="nav-link">Blog</a>
-                         </li>
-                         <li class="nav-item">
-                              <a href="contact.html" class="nav-link contact">Contact</a>
+                              <a href="#footer" class="nav-link contact smoothScroll">Contact</a>
                          </li>
                     </ul>
                </div>
@@ -63,7 +60,7 @@
      </nav>
 
      <!-- HERO -->
-     <section class="hero hero-bg d-flex justify-content-center align-items-center">
+     <section class="hero hero-bg d-flex justify-content-center align-items-center" id="hero">
           <div class="container">
                <div class="row">
 
@@ -74,7 +71,7 @@
                                         class="fa fa-heart animate__animated animate__heartBeat animate__infinite infinite"
                                         aria-hidden="true"></i></h1>
 
-                              <a href="contact.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up"
+                              <a href="#footer" class="custom-btn btn-bg btn mt-3 smoothScroll chat" data-aos="fade-up"
                                    data-aos-delay="100">Chat with us!</a>
 
                               <strong class="d-block py-3 pl-5 text-white" data-aos="fade-up" data-aos-delay="200">
@@ -124,10 +121,7 @@
 
           <div class="container">
                <div class="row">
-
-                    
-
-                    <div class="col-lg-6 col-md-10 offset-lg-9 col-12 d-flex flex-column-reverse justify-content-center align-items-center mt-4">
+                    <div class="col-lg-6 col-md-6 offset-lg-7 offset-md-9 col-12 d-flex flex-column-reverse justify-content-center align-items-center mt-4">
                          <div class="about-image" data-aos="fade-left" data-aos-delay="200">
 
                               <img src="images/destionation.svg" class="img-fluid" alt="destination">
@@ -135,18 +129,16 @@
                     </div>
                </div>
           </div>
+    </section>
 
-
-     </section>
-
-     <div class="google-map" data-aos="zoom-in-up">
+     <div class="google-map" data-aos="zoom-in-up" >
           <iframe
                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d987.7311166677376!2d112.62017972922906!3d-8.00672647160825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd627fa6be942bd%3A0x82c14e295cc88076!2sAula%20SARWAKIRTI%20-%20UNIKAMA!5e0!3m2!1sid!2sid!4v1632568006975!5m2!1sid!2sid"
                width="1920" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
      </div>
 
      <!-- TESTIMONIAL -->
-     <section class="testimonial section-padding">
+     <section class="testimonial section-padding" id="project">
           <div class="container">
                <div class="row">
 
@@ -178,7 +170,7 @@
           </div>
      </section>
 
-     <section class="project section-padding-half" id="project">
+     <section class="project section-padding-half">
           <div class="container-fluid">
                <div class="row">
 
@@ -226,7 +218,8 @@
           </div>
      </section>
 
-     <footer class="site-footer">
+     <!-- FOOTER -->
+     <footer class="site-footer" id="footer">
           <div class="container">
                <div class="row">
 
@@ -239,25 +232,22 @@
                          <h4 class="my-4">Contact Info</h4>
 
                          <p class="mb-1">
-                              <i class="fa fa-phone mr-2 footer-icon"></i>
-                              +99 080 070 4224
+                              <i class="fa fa-whatsapp animate__animated animate__tada animate__infinite infinite" aria-hidden="true" data-toggle="tooltip"
+                                        data-placement="bottom" title="Whatsapp"></i>
+                              +62 857 3686 2399
                          </p>
 
                          <p>
                               <a href="#">
-                                   <i class="fa fa-envelope mr-2 footer-icon"></i>
-                                   hello@company.com
+                                   <i class="fa fa-envelope-o" aria-hidden="true" data-toggle="tooltip"
+                                        data-placement="bottom" title="E-mail"></i>
+                                   staff@baemon.web.id
                               </a>
                          </p>
                     </div>
 
                     <div class="col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="300">
-                         <h4 class="my-4">Our Studio</h4>
-
-                         <p class="mb-1">
-                              <i class="fa fa-home mr-2 footer-icon"></i>
-                              Av. Lúcio Costa - Barra da Tijuca, Rio de Janeiro - RJ, Brazil
-                         </p>
+                         
                     </div>
 
                     <div class="col-lg-4 mx-lg-auto text-center col-md-8 col-12" data-aos="fade-up"
@@ -267,20 +257,10 @@
 
                     <div class="col-lg-4 mx-lg-auto col-md-6 col-12" data-aos="fade-up" data-aos-delay="500">
 
-                         <ul class="footer-link">
-                              <li><a href="#">Stories</a></li>
-                              <li><a href="#">Work with us</a></li>
-                              <li><a href="#">Privacy</a></li>
-                         </ul>
                     </div>
 
                     <div class="col-lg-3 mx-lg-auto col-md-6 col-12" data-aos="fade-up" data-aos-delay="600">
-                         <ul class="social-icon">
-                              <li><a href="#" class="fa fa-instagram"></a></li>
-                              <li><a href="#" class="fa fa-twitter"></a></li>
-                              <li><a href="#" class="fa fa-dribbble"></a></li>
-                              <li><a href="#" class="fa fa-behance"></a></li>
-                         </ul>
+
                     </div>
 
                </div>
