--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 
      <!-- SCROLL TOP -->
      <a href="" id="scroll" onclick="scrollToTop(); return false">
-          <!-- <div class="rounded-circle animate__animated animate__pulse animate__infinite infinite" id="scrollTop"> -->
           <div class="rounded-circle" id="scrollTop">
                <i class="fa fa-arrow-up" aria-hidden="true" style="color: white;" id="arrow"></i>
           </div>
@@ -147,11 +146,13 @@
                     <div class="col-lg-4 col-4 col-sm-12 col-md-6 col-12">
                          <div class="card-deck">
                               <div class="card mb-4">
-                                   <img class="card-img-top" src="images/office.png" alt="Card image cap">
+                                   <img class="card-img-top" src="images/project/sim.png" alt="Sistem Informasi Manaemen Sekolah">
                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                        <h5 class="card-title">Sistem Informasi Manajemen Sekolah</h5>
+                                        <p class="card-text">
+                                             Sistem untuk mengolah data pembayaran, absensi, penilaian, dan bank soal untuk penilaian CGT <i>(Computer Based Test)</i>
+                                        </p>
+                                        <p class="card-text hovering"><a href="https://sim.baemon.web.id/" target="_blank"><small>View more →</small></a></p>
                                       </div>
                               </div>
                          </div>
@@ -159,11 +160,13 @@
                     <div class="col-lg-4 col-4 col-sm-12 col-md-6 col-12">
                          <div class="card-deck">
                               <div class="card mb-4">
-                                   <img class="card-img-top" src="images/office.png" alt="Card image cap">
+                                   <img class="card-img-top" src="images/project/smp.png" alt="Sistem Manajemen Perpustakaan">
                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                        <h5 class="card-title">Sistem Manajemen Perpustakaan</h5>
+                                        <p class="card-text">
+                                             Sistem perpustakaan untuk mengolah pencarian buku, peminjaman, pengemablian dan denda peminjaman.
+                                        </p>
+                                        <p class="card-text hovering"><a href="https://perpus.baemon.web.id/" target="_blank"><small>View more →</small></a></p>
                                       </div>
                               </div>
                          </div>
@@ -171,35 +174,13 @@
                     <div class="col-lg-4 col-4 col-sm-12 col-md-6 col-12">
                          <div class="card-deck">
                               <div class="card mb-4">
-                                   <img class="card-img-top" src="images/office.png" alt="Card image cap">
+                                   <img class="card-img-top" src="images/project/spk.png" alt="Sistem Pendukung Keputusan">
                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                                      </div>
-                              </div>
-                         </div>
-                    </div>
-                    <div class="col-lg-4 col-4 col-sm-12 col-md-6 col-12">
-                         <div class="card-deck">
-                              <div class="card mb-4">
-                                   <img class="card-img-top" src="images/office.png" alt="Card image cap">
-                                   <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                                      </div>
-                              </div>
-                         </div>
-                    </div>
-                    <div class="col-lg-4 col-4 col-sm-12 col-md-6 col-12">
-                         <div class="card-deck">
-                              <div class="card mb-4">
-                                   <img class="card-img-top" src="images/office.png" alt="Card image cap">
-                                   <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                        <h5 class="card-title">Sistem Pendukung Keputusan Penerimaan Beasiswa</h5>
+                                        <p class="card-text">
+                                             Sistem ranking untuk penerimaan data mahasiswa dengan metode PROMETHEE.
+                                        </p>
+                                        <p class="card-text hovering"><a href="https://demosatu.baemon.web.id/" target="_blank"><small>View more →</small></a></p>
                                       </div>
                               </div>
                          </div>
