--- a/index.html
+++ b/index.html
@@ -152,7 +152,11 @@
                                         <p class="card-text">
                                              Sistem untuk mengolah data pembayaran, absensi, penilaian, dan bank soal untuk penilaian CGT <i>(Computer Based Test)</i>
                                         </p>
-                                        <p class="card-text hovering"><a href="https://sim.baemon.web.id/" target="_blank"><small>View more →</small></a></p>
+                                        <p class="card-text hovering"><a href="https://sim.baemon.web.id/" target="_blank"><small>View more →</small></a>
+                                            <span class="float-right">
+                                                  <a href="https://github.com/godgodwinter/sim-v2.git" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                            </span> 
+                                        </p>
                                       </div>
                               </div>
                          </div>
@@ -166,7 +170,11 @@
                                         <p class="card-text">
                                              Sistem perpustakaan untuk mengolah pencarian buku, peminjaman, pengemablian dan denda peminjaman.
                                         </p>
-                                        <p class="card-text hovering"><a href="https://perpus.baemon.web.id/" target="_blank"><small>View more →</small></a></p>
+                                        <p class="card-text hovering"><a href="https://perpus.baemon.web.id/" target="_blank"><small>View more →</small></a>
+                                             <span class="float-right">
+                                                  <a href="https://github.com/laksa19/mikhmonv3" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                            </span>
+                                        </p>
                                       </div>
                               </div>
                          </div>
@@ -180,7 +188,9 @@
                                         <p class="card-text">
                                              Sistem ranking untuk penerimaan data mahasiswa dengan metode PROMETHEE.
                                         </p>
-                                        <p class="card-text hovering"><a href="https://demosatu.baemon.web.id/" target="_blank"><small>View more →</small></a></p>
+                                        <p class="card-text hovering"><a href="https://demosatu.baemon.web.id/" target="_blank"><small>View more →</small></a>
+                                                  
+                                        </p>
                                       </div>
                               </div>
                          </div>
