--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
                     <div class="col-lg-4 col-4 col-sm-12 col-md-6 col-12">
                          <div class="card-deck">
                               <div class="card mb-4">
-                                   <img class="card-img-top" src="images/project/sim.png" alt="Sistem Informasi Manaemen Sekolah">
+                                   <img class="card-img-top" src="images/project/sim.png" alt="Sistem Informasi Manaemen Sekolah" data-toggle="modal" data-target="#simCard">
                                    <div class="card-body">
                                         <h5 class="card-title">Sistem Informasi Manajemen Sekolah</h5>
                                         <p class="card-text">
-                                             Sistem untuk mengolah data pembayaran, absensi, penilaian, dan bank soal untuk penilaian CGT <i>(Computer Based Test)</i>
+                                             Sistem untuk mengolah data pembayaran, absensi, penilaian, dan bank soal untuk penilaian CBT <i>(Computer Based Test)</i>
                                         </p>
                                         <p class="card-text hovering"><a href="https://sim.baemon.web.id/" target="_blank"><small>View more →</small></a>
                                             <span class="float-right">
@@ -164,7 +164,7 @@
                     <div class="col-lg-4 col-4 col-sm-12 col-md-6 col-12">
                          <div class="card-deck">
                               <div class="card mb-4">
-                                   <img class="card-img-top" src="images/project/smp.png" alt="Sistem Manajemen Perpustakaan">
+                                   <img class="card-img-top" src="images/project/smp.png" alt="Sistem Manajemen Perpustakaan" data-toggle="modal" data-target="#smpCard">
                                    <div class="card-body">
                                         <h5 class="card-title">Sistem Manajemen Perpustakaan</h5>
                                         <p class="card-text">
@@ -182,14 +182,14 @@
                     <div class="col-lg-4 col-4 col-sm-12 col-md-6 col-12">
                          <div class="card-deck">
                               <div class="card mb-4">
-                                   <img class="card-img-top" src="images/project/spk.png" alt="Sistem Pendukung Keputusan">
+                                   <img class="card-img-top" src="images/project/spk.png" alt="Sistem Pendukung Keputusan" data-toggle="modal" data-target="#spkCard">
                                    <div class="card-body">
                                         <h5 class="card-title">Sistem Pendukung Keputusan Penerimaan Beasiswa</h5>
                                         <p class="card-text">
                                              Sistem ranking untuk penerimaan data mahasiswa dengan metode PROMETHEE.
                                         </p>
                                         <p class="card-text hovering"><a href="https://demosatu.baemon.web.id/" target="_blank"><small>View more →</small></a>
-                                                  
+
                                         </p>
                                       </div>
                               </div>
@@ -197,6 +197,55 @@
                     </div>
                </div>
           </div>
+
+          <!--MODAL CARD-->
+          <div class="modal fade" id="simCard" tabindex="-1" role="dialog" aria-labelledby="simCard" aria-hidden="true">
+               <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+                 <div class="modal-content">
+                   <div class="modal-header">
+                     <h5 class="modal-title" id="modalTitle">Sistem Informasi Manajemen Sekolah</h5>
+                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                       <span aria-hidden="true">&times;</span>
+                     </button>
+                   </div>
+                   <div class="modal-body">
+                         <img class="card-img-top" src="images/project/sim.png" alt="Sistem Informasi Manaemen Sekolah">
+                   </div>
+                 </div>
+               </div>
+             </div>
+
+             <div class="modal fade" id="smpCard" tabindex="-1" role="dialog" aria-labelledby="smpCard" aria-hidden="true">
+               <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+                 <div class="modal-content">
+                   <div class="modal-header">
+                     <h5 class="modal-title" id="modalTitle">Sistem Manajemen Perpustakaan</h5>
+                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                       <span aria-hidden="true">&times;</span>
+                     </button>
+                   </div>
+                   <div class="modal-body">
+                         <img class="card-img-top" src="images/project/smp.png" alt="Sistem Manajemen Perpustakaan">
+                   </div>
+                 </div>
+               </div>
+             </div>
+
+             <div class="modal fade" id="spkCard" tabindex="-1" role="dialog" aria-labelledby="spkCard" aria-hidden="true">
+               <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+                 <div class="modal-content">
+                   <div class="modal-header">
+                     <h5 class="modal-title" id="modalTitle">Sistem Pendukung Keputusan Penerimaan Beasiswa</h5>
+                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                       <span aria-hidden="true">&times;</span>
+                     </button>
+                   </div>
+                   <div class="modal-body">
+                         <img class="card-img-top" src="images/project/spk.png" alt="Sistem Pendukung Keputusan">
+                   </div>
+                 </div>
+               </div>
+             </div>
      </section>
 
      <section class="project section-padding-half">
