--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
                          <div class="card-deck">
                               <div class="card mb-4">
                                    <img class="card-img-top" src="images/project/sim.png" alt="Sistem Informasi Manaemen Sekolah" data-toggle="modal" data-target="#simCard">
+                                        <div class="container" >
+                                             <div class="row">
+                                                  <div class="col-12">
+                                                       <span class="badge badge-pill badge-info">#laravel</span>
+                                                       <span class="badge badge-pill badge-info">#sim</span>
+                                                       
+
+                                                  </div>
+                                             </div>
+                                        </div>
                                    <div class="card-body">
                                         <h5 class="card-title">Sistem Informasi Manajemen Sekolah</h5>
                                         <p class="card-text">
@@ -165,6 +175,16 @@
                          <div class="card-deck">
                               <div class="card mb-4">
                                    <img class="card-img-top" src="images/project/smp.png" alt="Sistem Manajemen Perpustakaan" data-toggle="modal" data-target="#smpCard">
+                                   <div class="container" >
+                                        <div class="row">
+                                             <div class="col-12">
+                                                  <span class="badge badge-pill badge-info">#laravel</span>
+                                                  <span class="badge badge-pill badge-info">#perpus</span>
+                                                  
+
+                                             </div>
+                                        </div>
+                                   </div>
                                    <div class="card-body">
                                         <h5 class="card-title">Sistem Manajemen Perpustakaan</h5>
                                         <p class="card-text">
@@ -183,13 +203,24 @@
                          <div class="card-deck">
                               <div class="card mb-4">
                                    <img class="card-img-top" src="images/project/spk.png" alt="Sistem Pendukung Keputusan" data-toggle="modal" data-target="#spkCard">
+                                   <div class="container" >
+                                        <div class="row">
+                                             <div class="col-12">
+                                                  <span class="badge badge-pill badge-info">#laravel</span>
+                                                  <span class="badge badge-pill badge-info">#spk</span>
+                                                  <span class="badge badge-pill badge-info">#promethee</span>
+                                             </div>
+                                        </div>
+                                   </div>
                                    <div class="card-body">
                                         <h5 class="card-title">Sistem Pendukung Keputusan Penerimaan Beasiswa</h5>
                                         <p class="card-text">
                                              Sistem ranking untuk penerimaan data mahasiswa dengan metode PROMETHEE.
                                         </p>
                                         <p class="card-text hovering"><a href="https://demosatu.baemon.web.id/" target="_blank"><small>View more →</small></a>
-
+                                             <span class="float-right">
+                                                  <a href="https://github.com/godgodwinter/laravel-promethee-mahasiswa-berprestasi.git" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                            </span>
                                         </p>
                                       </div>
                               </div>
