--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                               <a href="#project" class="nav-link smoothScroll">Our Works</a>
                          </li>
                          <li class="nav-item">
+                              <a href="blog.html" class="nav-link smoothScroll">Blog</a>
+                         </li>
+                         <li class="nav-item">
                               <a href="#footer" class="nav-link contact smoothScroll">Contact</a>
                          </li>
                     </ul>
